; ModuleID = '/home/carl/AnghaBench/FFmpeg/fftools/extr_cmdutils.c_opt_max_alloc.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/fftools/extr_cmdutils.c_opt_max_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AV_LOG_FATAL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"Invalid max_alloc \22%s\22.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @opt_max_alloc(i8* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = call i64 @strtol(i8* %9, i8** %7, i32 10)
  store i64 %10, i64* %8, align 8
  %11 = load i8*, i8** %7, align 8
  %12 = load i8, i8* %11, align 1
  %13 = icmp ne i8 %12, 0
  br i1 %13, label %14, label %19

14:                                               ; preds = %3
  %15 = load i32, i32* @AV_LOG_FATAL, align 4
  %16 = load i8*, i8** %6, align 8
  %17 = call i32 @av_log(i32* null, i32 %15, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i8* %16)
  %18 = call i32 @exit_program(i32 1)
  br label %19

19:                                               ; preds = %14, %3
  %20 = load i64, i64* %8, align 8
  %21 = call i32 @av_max_alloc(i64 %20)
  ret i32 0
}

declare dso_local i64 @strtol(i8*, i8**, i32) #1

declare dso_local i32 @av_log(i32*, i32, i8*, i8*) #1

declare dso_local i32 @exit_program(i32) #1

declare dso_local i32 @av_max_alloc(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
